--- a/src/components/ContainerStyles.css
+++ b/src/components/ContainerStyles.css
@@ -1,9 +1,8 @@
-.card {
+.cardObjects {
   position: relative;
+  width: 290px;
   left: 75px;
   top: 50px;
-
-  border: 1px solid #2b2d42;
   border-radius: 1rem;
   margin-bottom: 60px;
 }
@@ -37,4 +36,17 @@
   font-size: 15px;
   border-radius: 10px;
   margin-left: 30px;
+}
+
+/**
+* ! Carousel img + body "Home.jsx"
+*/
+
+.carousel-img {
+  position: sticky;
+  top: 0;
+  right: 0;
+  height: auto;
+  width: 100%;
+  margin-top: 50px;
 }
