--- a/src/components/ContainerStyles.css
+++ b/src/components/ContainerStyles.css
@@ -7,37 +7,6 @@
   margin-bottom: 60px;
 }
 
-.change {
-  background-color: #cdb4db;
-  color: black;
-  font-size: 15px;
-  border-radius: 10px;
-}
-
-.sum {
-  background-color: #cdb4db;
-  color: black;
-  font-size: 15px;
-  border-radius: 10px;
-  margin-left: 30px;
-}
-
-.substract {
-  background-color: #cdb4db;
-  color: black;
-  font-size: 15px;
-  border-radius: 10px;
-  margin-left: 30px;
-}
-
-.reset {
-  background-color: #cdb4db;
-  color: black;
-  font-size: 15px;
-  border-radius: 10px;
-  margin-left: 30px;
-}
-
 /**
 * ! Carousel img + body "Home.jsx"
 */
@@ -49,4 +18,79 @@
   height: auto;
   width: 100%;
   margin-top: 50px;
+}
+
+.carddetail {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  padding: 20px;
+  margin-top: 70px;
+  background: var(--bg-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+}
+
+.card__back svg,
+.card__menu svg {
+  width: 20px;
+  height: 20px;
+}
+
+.card__wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.card__title {
+  font-weight: 600;
+  font-size: 25px;
+  color: var(--main-color);
+}
+
+.card__subtitle {
+  font-weight: 400;
+  font-size: 15px;
+  color: var(--main-color);
+  letter-spacing: 0.5px;
+}
+
+.card__price {
+  font-weight: 600;
+  font-size: 22px;
+  color: var(--main-color);
+}
+
+.card__counter {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 15px;
+  padding: 1px;
+  background: transparent;
+  border-radius: 40px;
+}
+
+.card__counter-score,
+.card__btn {
+  font-weight: 700;
+  font-size: 22px;
+  color: var(--main-color);
+}
+
+.card__btn {
+  width: 30px;
+  height: 30px;
+  border-radius: 100%;
+  border: none;
+  background: transparent;
+  margin-bottom: 25px;
+}
+
+.card__btn-plus {
+  background: var(--bg-color);
+  margin-bottom: 25px;
 }
